<resources>
    <string name="app_name">SRF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="chooser">Send message...</string>
    <string name="action_settings">Settings</string>
    <string name="how_to_select_titel">How to select a good titel</string>
    <string name="how_to_select_question">how to select a good question </string>
    <string name="view_comments_str">View comments</string>
    <string name="title_activity_tapped">TappedActivity</string>
    <string name="section_format">Hello world from section: %1$d</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="comment_string">comment</string>
    <string name="home_str">Home</string>
    <string name="profile_str">Profile</string>
    <string name="settings_str">Settings</string>
    <string name="nav_about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="select_fields">Select fields of your interest: </string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Scholorship programs</item>
        <item>Settings</item>


    </string-array>
    <string name="username">Username</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="validemail">Please provide us a valid email address</string>
    <string name="confirmpw">Confirm your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Sign in</string>
    <string name="register">Dont have an account? sign up now</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="join_us">Join us - Sign up</string>
    <string name="have_account">Already have an account</string>
    <string name="interst">Field of interst </string>
    <string name="schoarship">Scholarship</string>
    <string name="Logintoyouraccount">Login to your account</string>
    <string name="singinfb">Sign in with facebook</string>
    <string name="forgotpw">I forgot my password</string>
    <string name="noti">Notifications</string>
    <string name="menu1">Logo story</string>
    <string name="menu2">about SRF</string>
    <string name="menu3">Contact us</string>
    <string name="menu4">Webinars</string>
    <string name="menu5">Log out</string>
    <string name="logoStory">
        The SRF logo features the Secretary bird (Sagittarius serpentarius), looking up high, by combining two elements;
        an array of five crest feathers over a search icon portraying the head and break we draw this logo the inspiration
        to aim high and the motivation to work with SRF members towards realizing tha academic and scientific potential
        of Sudan.\nThe Secretary bird demonstrates valuable lessons for ambitious scientists and students in our beloved
        Sudan:\n\t                - Writing is a significant scientific skill for communication and dissemination of knowledge the
        crest feathers on the Secretary bird make it resemble a writer tucking quill pens behind his ears. \n\t-
        The array of five feathers highlight the core academic values of integrity, freedom, quality, curiosity and innovation.
        SRF emphasizes the importance of mastering these values. \n\t - The search icon symbolizes the deep attention to
        details by a disciplined and inquisitive spirit in pursuit of knowledge. The Secretary bird is in constant search and
        its attentional resources are focused on it; a Sudanese researches attentional resources focus at the questions they
        seek answers for. \n\t             - Independence is a salient trait of the bird. it can bot be domesticated defies any such attempts.
        Unbiased intellectual independence is a core quality of a successful scientist.\n\t              - The bird reflects our Sudanism. It
        is free, independent, loyal, defiant and hard-working.
    </string>
    <string name="logo">SRF logo story</string>
    <string name="announcements">Announcements</string>
    <string name="announcement">Announcements</string>
    <string name="luminary">Luminary of the week</string>
    <string name="LogoStoryShort">The SRF logo features the Secretary bird (Sagittarius serpentarius ), looking up high, by combining two elements; an array of five crest feathers over a search icon portaying the head and beak. We draw from the logo the inspiration to aim high and the motivation to work with SRF members towards realizing the academic and scientific potential of Sudan.</string>
    <string name="title_activity_announcements">Announcements</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="ForgetPassword">Forgot your password? No worries, fill-in the form below and we will send you instructions on how to reset your password</string>
    <string name="title_activity_tapp">TappActivity</string>
    <string name="rational">SRF addresses the absence of dedicated Sudanese platforms focusing on capacity building, knowledge sharing and research dissemination in a blended continuous education model. In this context we provide a common platform for interaction between Sudanese learners and researchers to establish and drive the momentum of research and education in Sudan. SRF serves as a bridge to link Sudanese undergraduates and postgraduates with the expertise and competence of Sudanese researchers worldwide</string>
    <string name="our_vision">
Equip young and budding Sudanese scientist to compete up to International standards by acquisition of core research competencies and academic soft skills</string>
    <string name="our_mission">Expand the initiative by utilizing the Internet and social networking platforms to collect, disseminate and emphasize the Sudanese researchers footprint and participation in all fields of scientific research. Facilitate communication between generations of Sudanese researchers and scientists to ensure the continuity of the scientific mission and the transfer of knowledge, techniques and expertise within and into Sudan</string>
    <string name="our_goals">SRF focuses on achieving the following:\n\t
       1. Establish an index for Sudanese researcher all over the world and connect them\n\t
       2. Establish Sudanese researches scientific footprint\n\t
       3. Strengthen Sudanese researchers’ core qualities\n\t
       4. Encourage Sudanese people to be more involved in research and development\n\t
       5. Exchange knowledge and expertise\n\t
       6. Share published scientific research papers, articles, essays, journals and links\n\t
       7. Discuss experiences, issues and provide answers in an open and honest manner\n\t
       8. Provide a platform for peer support and discussions</string>
    <string name="our_strategy">
        1.support research progress and outputs from Sudanese talent pool via:\n\t
           >engagement in focused specialized collaborations among researchers through facilitating communication, joint publications and joint organizations of workshops and conferences inside and outside Sudan\n\t
           >support the professional and personal development of junior researchers (via career development, research specific topics and scholarship and training programs and activities)\n\t
           >ensure networking and joint collaboration between junior and senior researchers and academics as well as among senior researchers and academics\n\t
        2.Expand the initiative scope to benefit a larger cohort of Sudanese students and researchers\n\t
        3.Promote the collection and sharing of the members collective expertise by enhancing communication between members\n\t
        4.Promote mentorship programs for scholars, researchers and students by senior members of the group and through procuring the expertise of reputable Sudanese professors and International professors\n\t
        5.Help researchers with limited financial means to publish and disseminate good quality science\n\t
        6.Instill the spirit of initiation, volunteering and proaction\n\t
        7.Provide access to scientific material through building partnerships with reputable publishers\n\t
        8.Provide soft skills and communication training by recruiting the expertise of pioneers in the field\n\t
        9.Collaborate with other initiatives in the field to exchange resources and ideas towards achieving our goals\n\t
        10.Hosting seminars, workshops, symposiums, etc.. Online and off-line\n\t
        11.Mailing lists (specialized and public)\n\t
        12.Book library\n\t
        13.Finally, collaborate with MOOCs such as Coursera to host highly professional Sudanese lecturers/universities\n\t
    </string>
    <string name="hint_new_question_subject">Write your question titel </string>
    <string name="hint_new_question_content">Write your question content</string>
    <string name="title_activity_select_question">SelectQuestionActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="about_luminary">About luminaries</string>
    <string name="view_more_luminary">View more</string>
    <string name="nominate_luminary">Nominate luminary</string>
    <string name="log_out">Log out</string>
    <string name="log_out_assurance">are you sure you want to log out?</string>
    <string name="get_in_touch">Get in touch</string>
    <string name="subject">Subject</string>
    <string name="content">Content</string>
    <string name="select_contact">Select contact channel</string>
    <string name="general_inquires">General inquires</string>
    <string name="becpmr_partner">Become a SRF partner</string>
    <string name="relation_team">Relations team</string>
    <string name="tech_team">Tech team</string>
    <string name="mentoring">Mentoring</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="altigani_almahi">Al Tigani Mohammed Al Mahi</string>
    <string name="professor_of_psychology">Professor of psychiatry</string>
    <string name="altigabi_bio">Kitchener medical school until 1935 institute of psychiatry , London 1947</string>
    <string name="fill">Fill in the following form with information about your candidate</string>
    <string name="speciality">Specialty</string>
    <string name="contribution">Contribution</string>
    <string name="please_provide_limk">Please provide a link (online videos/audios/newsarticle/journal...etc)</string>
    <string name="short_biio">Short bio</string>
    <string name="upload_photo">Upload luminary photo</string>
    <string name="menu_webinar">Webinars</string>
    <string name="menu_announcements">Announcements</string>
    <string name="menu_about">About</string>
    <string name="menu_srf">SRF</string>
    <string name="menu_alba3ati">alba3ati</string>
    <string name="menu_logo">Logo story</string>
    <string name="menu_effective">How to write an effective story</string>
    <string name="menu_reputation">Reputation</string>
    <string name="menu_luminaries">Luminaries</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_contact">Contact us</string>
</resources>